--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <video id="videoPlayer" autoplay playsinline></video>
+    <video id="videoPlayer" autoplay muted playsinline></video>
     <script>
         const video = document.getElementById("videoPlayer");
         const player = dashjs.MediaPlayer().create();
